--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,12 @@ name = "pypi"
 
 [packages]
 flask = "==2.1.0"
-psycopg2 = "==2.9.3"
 waitress = "==2.0.0"
 pytz = "==2022.1"
 aiohttp = "==3.8.1"
 pytelegrambotapi = "==4.2.0"
 beautifulsoup4 = "==4.10.0"
+psycopg2-binary = "*"
 
 [dev-packages]
 
