--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy to Fly
-on: |
-  workflow_dispatch:
-  push
+on:
+  push:
+  workflow_dispatch :
 jobs:
   deploy:
     name: Deploy proxy
